welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: not found: type bool
var sortie:bool=false;
           ^Poucet:4: error: type mismatch;
 found   : Unit
 required: Boolean
while (sortie=false) {
             ^